objects/PC_Message__c.object
<CustomObject>
    <description>The PC_Message__c is a custom object in Patient Connect that logs the SMSs and App messages sent/received.</description>
    <fields>
        <fullName>ACLS_Campaign_Name__c</fullName>
        <label>Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACLS_Engagement_Program_Code__c</fullName>
        <label>Engagement Program Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACLS_Interaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interaction</label>
        <referenceTo>PC_Interaction__c</referenceTo>
        <relationshipLabel>Messages</relationshipLabel>
        <relationshipName>Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACLS_Program_Service_Permission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Service Permission</label>
        <referenceTo>PC_Program_Service_Permission__c</referenceTo>
        <relationshipLabel>Messages</relationshipLabel>
        <relationshipName>Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACLS_SMS_Keyword__c</fullName>
        <label>SMS Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACLS_SMS_Operation__c</fullName>
        <label>SMS Operation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opt-In</fullName>
                </value>
                <value>
                    <fullName>Opt-Out</fullName>
                </value>
                <value>
                    <fullName>Send SMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Case number with which the message is associated.</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Messages</relationshipLabel>
        <relationshipName>Messages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Content__c</fullName>
        <description>The actual message content received or sent by the user.</description>
        <label>Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PC_ExternalRecipientName__c</fullName>
        <description>Name for an external non-case recipient.</description>
        <label>External Recipient Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_ExternalRecipientNumber__c</fullName>
        <description>Phone Number respective to an external non-case recipient.</description>
        <label>External Recipient Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PC_Feed_Item_Id__c</fullName>
        <description>The salesforce ID of the feed.</description>
        <label>Feed Item Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_FromAlias__c</fullName>
        <description>The From Phone number chosen to send the messages</description>
        <label>From Alias</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Hide_from_Feed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To hide messages from showing on the user feed.</description>
        <label>Hide from Feed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_MessagePreviousStatus__c</fullName>
        <description>The status of a message prior to the current status.</description>
        <label>Message Previous Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Sending</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Undelivered</fullName>
                </value>
                <value>
                    <fullName>Receiving</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_MessageStatusDetails__c</fullName>
        <description>Gives additional details about the message status</description>
        <label>Message Status Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Message_Date__c</fullName>
        <description>The date and time of the message send from the application.</description>
        <label>Message Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PC_Message_Read__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The date and time message read by the user.</description>
        <label>Message Read</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Message_Status__c</fullName>
        <description>The delivery status of the message sent/received.</description>
        <label>Message Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Sending</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Undelivered</fullName>
                </value>
                <value>
                    <fullName>Receiving</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Unprocessed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_ReceiverAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account that receives the message.</description>
        <label>Receiver Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ReceiverAccounts</relationshipLabel>
        <relationshipName>PC_ReceiverAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_ReceiverUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user that receives the message.</description>
        <label>Receiver User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>ReceiverUsers</relationshipLabel>
        <relationshipName>PC_ReceiverUsers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Receiver__c</fullName>
        <description>The name of the person who receives the message.</description>
        <label>Receiver</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_SMSELetter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The eletter containing SMS Template details .</description>
        <label>SMS Eletter</label>
        <referenceTo>PC_Engagement_Program_Eletter__c</referenceTo>
        <relationshipLabel>SMSEletters</relationshipLabel>
        <relationshipName>PC_SMSeletters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_SMSId__c</fullName>
        <description>Unique ID of the message generated by the Third Party vendor.</description>
        <externalId>true</externalId>
        <label>SMS ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_SMSVendorName__c</fullName>
        <description>The vendor used for facilitating messaging service</description>
        <label>SMS Vendor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_SenderAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account that sent the message.</description>
        <label>Sender Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SenderAccounts</relationshipLabel>
        <relationshipName>PC_SenderAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_SenderUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user that sent the message.</description>
        <label>Sender User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>SenderUsers</relationshipLabel>
        <relationshipName>PC_SenderUsers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_Sender__c</fullName>
        <description>The name of the person who sends the message.</description>
        <label>Sender</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Source_Type__c</fullName>
        <description>The type of message sent - SMS or App Message.</description>
        <label>Source Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>App Message</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_TransactionId__c</fullName>
        <description>The ID corresponding to each message transaction(Single/Bulk)</description>
        <label>Transaction ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Type__c</fullName>
        <description>The direction of the message sent - Inbound or Outbound.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Outbound</fullName>
                </value>
                <value>
                    <fullName>Inbound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Message</label>
    <listViews>
        <fullName>ACLS_Inbound_Message_Received</fullName>
        <columns>NAME</columns>
        <columns>PC_Case__c</columns>
        <columns>PC_SenderAccount__c</columns>
        <columns>PC_Message_Status__c</columns>
        <columns>PC_Sender__c</columns>
        <columns>PC_Receiver__c</columns>
        <columns>PC_Message_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PC_Type__c</field>
            <operation>equals</operation>
            <value>Inbound</value>
        </filters>
        <filters>
            <field>PC_Message_Status__c</field>
            <operation>equals</operation>
            <value>Received</value>
        </filters>
        <label>Inbound Message - Received​</label>
    </listViews>
    <listViews>
        <fullName>ACLS_Outbound_Message_Delivered</fullName>
        <columns>NAME</columns>
        <columns>PC_Case__c</columns>
        <columns>PC_ReceiverAccount__c</columns>
        <columns>PC_Message_Status__c</columns>
        <columns>PC_Sender__c</columns>
        <columns>PC_Receiver__c</columns>
        <columns>PC_Message_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PC_Type__c</field>
            <operation>equals</operation>
            <value>Outbound</value>
        </filters>
        <filters>
            <field>PC_Message_Status__c</field>
            <operation>equals</operation>
            <value>Delivered</value>
        </filters>
        <label>Outbound Message - Delivered​</label>
    </listViews>
    <listViews>
        <fullName>ACLS_Outbound_Message_Draft</fullName>
        <columns>NAME</columns>
        <columns>PC_Case__c</columns>
        <columns>PC_ReceiverAccount__c</columns>
        <columns>PC_Message_Status__c</columns>
        <columns>PC_Sender__c</columns>
        <columns>PC_Receiver__c</columns>
        <columns>PC_Message_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PC_Type__c</field>
            <operation>equals</operation>
            <value>Outbound</value>
        </filters>
        <filters>
            <field>PC_Message_Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>Outbound Message - Draft​</label>
    </listViews>
    <listViews>
        <fullName>ACLS_Outbound_Message_Failed</fullName>
        <columns>NAME</columns>
        <columns>PC_Case__c</columns>
        <columns>PC_ReceiverAccount__c</columns>
        <columns>PC_Message_Status__c</columns>
        <columns>PC_Sender__c</columns>
        <columns>PC_Receiver__c</columns>
        <columns>PC_Message_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PC_Type__c</field>
            <operation>equals</operation>
            <value>Outbound</value>
        </filters>
        <filters>
            <field>PC_Message_Status__c</field>
            <operation>equals</operation>
            <value>Failed</value>
        </filters>
        <label>Outbound Message - Failed</label>
    </listViews>
    <listViews>
        <fullName>ACLS_Outbound_Message_Queued</fullName>
        <columns>NAME</columns>
        <columns>PC_Case__c</columns>
        <columns>PC_ReceiverAccount__c</columns>
        <columns>PC_Message_Status__c</columns>
        <columns>PC_Sender__c</columns>
        <columns>PC_Receiver__c</columns>
        <columns>PC_Message_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PC_Type__c</field>
            <operation>equals</operation>
            <value>Outbound</value>
        </filters>
        <filters>
            <field>PC_Message_Status__c</field>
            <operation>equals</operation>
            <value>Queued</value>
        </filters>
        <label>Outbound Message - Queued</label>
    </listViews>
    <listViews>
        <fullName>ACLS_Outbound_Message_Unprocessed</fullName>
        <columns>NAME</columns>
        <columns>PC_Case__c</columns>
        <columns>PC_ReceiverAccount__c</columns>
        <columns>PC_Message_Status__c</columns>
        <columns>PC_Sender__c</columns>
        <columns>PC_Receiver__c</columns>
        <columns>PC_Message_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PC_Type__c</field>
            <operation>equals</operation>
            <value>Outbound</value>
        </filters>
        <filters>
            <field>PC_Message_Status__c</field>
            <operation>equals</operation>
            <value>Unprocessed</value>
        </filters>
        <label>Outbound Message - Unprocessed</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PC_Content__c</columns>
        <columns>PC_TransactionId__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Message Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Messages</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Empty_message</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(PC_Content__c)</errorConditionFormula>
        <errorMessage>You can&apos;t send blank messages!</errorMessage>
    </validationRules>
</CustomObject>